add icon for projects + change url img(add folders) + change load events

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 author:        "Antoine TABARAUD"
 description:   "Personal web site"
 title:         "Antoine TABARAUD"
-image:         "/assets/img/logo site2.png"
+image:         "logo site2.png"
 keywords:      "Antoine TABARAUD, TABARAUD, Antoine TBD, AntTBD, Ant TBD"
-favicon:       "/assets/img/favicon.ico"
+favicon:       "favicon.ico"
 url:           "https://anttbd.github.io" #"http://localhost"
 
 lastUpdate:
