--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ favicon:       "favicon.ico"
 url:           "https://anttbd.github.io" #"http://localhost"
 
 lastUpdate:
-    fr:        "janvier 2022"
-    en:        "January 2022"
+    fr:        "février 2022"
+    en:        "February 2022"
 
 # Build settings
 markdown:      kramdown
