--- a/_data/work_experience.yml
+++ b/_data/work_experience.yml
@@ -47,12 +47,12 @@
     en:         "Internship"
 
   description:
-    fr:         "Compréhension du besoin et développement d'un outil pour la qualification d'un détecteur de présence nouvelle génération. Cet outil utilise la technologie de la réalité virtuelle pour une précision optimale et permet également d'avoir une meilleure compréhension du fonctionnement du capteur."
-    en:         "Understanding of the need and tool's development for the qualification of a new generation of presence detector. This tool uses virtual reality technology for optimal precision and also provides a better understanding of how the sensor works."
+    fr:         "Compréhension du besoin et développement d'un outil pour la qualification d'un détecteur de présence nouvelle génération. Cet outil, développé sur Unity 3D, utilise la technologie de la réalité virtuelle pour une précision optimale (HTC Vive Trackers 3.0) et permet également d'avoir une meilleure compréhension du fonctionnement du capteur."
+    en:         "Understanding of the need and tool's development for the qualification of a new generation of presence detector. This tool, developed on Unity 3D, uses virtual reality technology (HTC Vive Trackers 3.0) for optimal precision and also provides a better understanding of how the sensor works."
 
   dates:
-    fr:         "13 semaines - 2021"
-    en:         "13 weeks - 2021"
+    fr:         "3 mois - 2021" # 13 semaines
+    en:         "3 months - 2021" # 13 weeks
 
 #############################################################################
 
@@ -125,12 +125,12 @@
     en:         "Internship"
 
   description:
-    fr:         "A partir d’une base existante, développement sous SharePoint et PowerApps d'un outil convivial et ergonomique afin d'améliorer la visibilité des offres produits."
-    en:         "From an existing base, development under Sharepoint and Powerapps of a user-friendly and ergonomic tool to improve the visibility of product offerings."
+    fr:         "A partir de fiches produits existantes, développement sous SharePoint et PowerApps d'un outil convivial et ergonomique afin d'améliorer la visibilité des offres produits de la SBU."
+    en:         "From an existing product sheets, development under Sharepoint and Powerapps of a user-friendly and ergonomic tool to improve the visibility of the SBU's product offerings."
 
   dates:
-    fr:         "8 semaines - 2019"
-    en:         "8 weeks - 2019"
+    fr:         "2&frac12; mois - 2019" # 8 semaines
+    en:         "2&frac12; months - 2019" # 8 weeks
 
 #############################################################################
 
